--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                     <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/img/intro.jpg" alt="..." />
                     <div class="intro-text left-0 text-center bg-faded p-5 rounded">
                         <h2 class="section-heading mb-4">
-                            <span class="section-heading-upper">Fresh Coffee</span>
+                            <span class="section-heading-upper">Un buen Café</span>
                             <span class="section-heading-lower">Worth Drinking</span>
                         </h2>
                         <p class="mb-3">Vendemos café para empresas y preparamos recepciones para sus invitados</p>
-                        <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="#!">Visit Us Today!</a></div>
+                        <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="#!">Visitenos hoy!</a></div>
                     </div>
                 </div>
             </div>
